Log enhancement + .gitignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,12 +36,12 @@ services:
       # SPRING_DATASOURCE_PASSWORD: password
 
       # Log directory used by the service (for logback-spring.xml)
-      LOG_DIR: /logs
+      # LOG_DIR: /logs
 
     ports:
       - "8080:8080"   # change if your service listens on a different port
     volumes:
-      - ./logs:/logs
+      - ./logs:/app/logs
 
 volumes:
   mariadb_data:
