--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,6 +105,23 @@ services:
     volumes:
       - kafka-3_data:/var/lib/kafka/data
 
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    restart: unless-stopped
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    environment:
+      KAFKA_CLUSTERS_0_NAME: xp-kafka-cluster
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-1:29092,kafka-2:29092,kafka-3:29092
+      KAFKA_CLUSTERS_0_METRICS_PORT: 9999
+    ports:
+      - "9080:8080"
+    volumes:
+      - ./logs:/app/logs
+
   envoy:
     image: envoyproxy/envoy:v1.32-latest
     container_name: envoy
