--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -202,6 +202,7 @@ services:
       - kafka-1
       - kafka-2
       - kafka-3
+      - kafka-init
     environment:
       # --- Instance identification ---
       INSTANCE_ID: xp-marketdata-service
@@ -209,6 +210,8 @@ services:
       SERVER_PORT: 8089
       # --- Kafka configuration ---
       SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka-1:29092,kafka-2:29092,kafka-3:29092
+      SPRING_KAFKA_CONSUMER_GROUP_ID: xp-marketdata-service-group
+      SPRING_KAFKA_TOPIC_OHLCV: ohlcv-topic
     ports:
       - "8089:8089"
     volumes:
